# dicom

./: .travis.yml  CMakeLists.txt  LICENSE  README.md
include/: dicom_dictionary.hpp  dicom_unique_identifiers.hpp  parser.hpp  sequence.hpp  tag.hpp  uid.hpp  utility.hpp  value_representation.hpp
resource/: download_documentation.sh
samples/: TG18-QC.1k_12b.tiff
samples/anatomic-2k/: dicom.txt
samples/glare-1k/: TG18-GA03.1k_12b.tiff  TG18-GA05.1k_12b.tiff  TG18-GA08.1k_12b.tiff  TG18-GA10.1k_12b.tiff  TG18-GA15.1k_12b.tiff  TG18-GA20.1k_12b.tiff  TG18-GA25.1k_12b.tiff  TG18-GA30.1k_12b.tiff  TG18-GQ.1k_12b.tiff  TG18-GQB.1k_12b.tiff  TG18-GQN.1k_12b.tiff  TG18-GV.1k_12b.tiff  TG18-GVN.1k_12b.tiff  dicom.txt
samples/glare-1k/TG18-GA/: TG18-GA-1k-03.dcm  TG18-GA-1k-05.dcm  TG18-GA-1k-08.dcm  TG18-GA-1k-10.dcm  TG18-GA-1k-15.dcm  TG18-GA-1k-20.dcm  TG18-GA-1k-25.dcm  TG18-GA-1k-30.dcm
samples/glare-1k/TG18-GQ/: TG18-GQ-1k-01.dcm  TG18-GQ-1k-02.dcm  TG18-GQ-1k-03.dcm
samples/glare-1k/TG18-GV/: TG18-GV-1k-01.dcm  TG18-GV-1k-02.dcm
samples/lumin-1k/: TG18-AD.1k_12b.tiff  TG18-CT.1k_12b.tiff  TG18-LN12-01.1k_12b.tiff  TG18-LN12-02.1k_12b.tiff  TG18-LN12-03.1k_12b.tiff  TG18-LN12-04.1k_12b.tiff  TG18-LN12-05.1k_12b.tiff  TG18-LN12-06.1k_12b.tiff  TG18-LN12-07.1k_12b.tiff  TG18-LN12-08.1k_12b.tiff  TG18-LN12-09.1k_12b.tiff  TG18-LN12-10.1k_12b.tiff  TG18-LN12-11.1k_12b.tiff  TG18-LN12-12.1k_12b.tiff  TG18-LN12-13.1k_12b.tiff  TG18-LN12-14.1k_12b.tiff  TG18-LN12-15.1k_12b.tiff  TG18-LN12-16.1k_12b.tiff  TG18-LN12-17.1k_12b.tiff  TG18-LN12-18.1k_12b.tiff  TG18-MP.1k_12b.tiff  TG18-UN10.1k_12b.tiff  TG18-UN80.1k_12b.tiff  TG18-UNL10.1k_12b.tiff  TG18-UNL80.1k_12b.tiff
samples/luminance-1K/: dicom.txt
samples/multi-1K/: TG18-BR.1k_12b.tiff  TG18-PQC.1k_12b.tiff  dicom.txt
samples/multi-2K/: dicom.txt
samples/noise-1k/: TG18-AFC.1k_12b.tiff  TG18-NS10.1k_12b.tiff  TG18-NS50.1k_12b.tiff  TG18-NS89.1k_12b.tiff  dicom.txt
samples/resol-1k/: TG18-CX.1k_12b.tiff  TG18-LPH10.1k_12b.tiff  TG18-LPH50.1k_12b.tiff  TG18-LPH89.1k_12b.tiff  TG18-LPV10.1k_12b.tiff  TG18-LPV50.1k_12b.tiff  TG18-LPV89.1k_12b.tiff  TG18-PX.1k_12b.tiff  TG18-RH10.1k_12b.tiff  TG18-RH50.1k_12b.tiff  TG18-RH89.1k_12b.tiff  TG18-RV10.1k_12b.tiff  TG18-RV50.1k_12b.tiff  TG18-RV89.1k_12b.tiff
samples/resolution-1k/: dicom.txt
samples/resolution-1k/TG18-CX/: TG18-PX-1k-01.dcm
samples/resolution-1k/TG18-LPH/: TG18-LPH-1k-01.dcm  TG18-LPH-1k-02.dcm  TG18-LPH-1k-03.dcm
samples/resolution-1k/TG18-LPV/: TG18-LPV-1k-01.dcm  TG18-LPV-1k-02.dcm  TG18-LPV-1k-03.dcm
samples/resolution-2k/: dicom.txt
source/: dicom_dictionary.cpp  dicom_unique_identifiers.cpp  main.cpp  parser.cpp  sequence.cpp  uid.cpp  utility.cpp  value_representation.cpp
tests/: CMakeLists.txt  main.cpp
tests/source/: main.cpp
(+7 files in other folders)
